--- a/fastapi_deployment/deployment.yaml
+++ b/fastapi_deployment/deployment.yaml
@@ -1,1 +1,21 @@
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: fastapi-deployment
+  namespace: fastapi
+spec:
+  replicas: 3
+  selector:
+    matchLabels:
+      app: fastapi
+  template:
+    metadata:
+      labels:
+        app: fastapi
+    spec:
+      containers:
+        - name: fastapi-app
+          image: smitwaman/fastapi:20240611
+          ports:
+            - containerPort: 9009
 
