--- a/fastapi_deployment/service.yaml
+++ b/fastapi_deployment/service.yaml
@@ -1,1 +1,15 @@
+apiVersion: v1
+kind: Service
+metadata:
+  name: fastapi-service
+  namespace: fastapi
+spec:
+  type: NodePort
+  selector:
+    app: fastapi
+  ports:
+    - protocol: TCP
+      port: 9009
+      targetPort: 9009
+      nodePort: 30080
 
