--- a/fastapi_deployment/service.yaml
+++ b/fastapi_deployment/service.yaml
@@ -1,12 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: fastapi-service
+  name: fastapi-svc
   namespace: fastapi
 spec:
+  type: LoadBalancer
   selector:
     app: fastapi
   ports:
     - protocol: TCP
-      port: 8000
+      port: 9009
       targetPort: 9009
+
