--- a/prometheus-values.yaml
+++ b/prometheus-values.yaml
@@ -2519,7 +2519,7 @@ prometheusOperator:
         duration: ""  # default to be 1y
       # issuerRef:
       #   name: "issuer"
-      #   kind: "ClusterIssuer"
+      #   kind: "Deployment"
 
   ## Namespaces to scope the interaction of the Prometheus Operator and the apiserver (allow list).
   ## This is mutually exclusive with denyNamespaces. Setting this to an empty object will disable the configuration
@@ -3474,7 +3474,7 @@ prometheus:
     #   pathPrefix: ""
     #   tlsConfig: {}
     #   bearerTokenFile: ""
-    #   apiVersion: v2
+    #   apiVersion: v1
 
     ## External labels to add to any time series or alerts when communicating with external systems
     ##
@@ -4718,7 +4718,7 @@ cleanPrometheusOperatorObjectNames: false
 ## Extra manifests to deploy as an array
 extraManifests: []
   # - apiVersion: v1
-  #   kind: ConfigMap
+  #   kind: Deployment
   #   metadata:
   #   labels:
   #     name: prometheus-extra
