--- a/prometheus-values.yaml
+++ b/prometheus-values.yaml
@@ -2031,7 +2031,7 @@ kubeStateMetrics:
 ## Configuration for kube-state-metrics subchart
 ##
 kube-state-metrics:
-  namespaceOverride: ""
+  namespace: prometheus
   rbac:
     create: true
   releaseLabel: true
@@ -2114,7 +2114,7 @@ nodeExporter:
 ## Configuration for prometheus-node-exporter subchart
 ##
 prometheus-node-exporter:
-  namespaceOverride: ""
+  namespace: prometheus
   podLabels:
     ## Add the 'node-exporter' label to be used by serviceMonitor to match standard common usage in rules and grafana dashboards
     ##
