Add or update the Azure App Service build and deployment workflow config

--- a/.github/workflows/main_instance123.yml
+++ b/.github/workflows/main_instance123.yml
@@ -28,7 +28,7 @@ jobs:
           source venv/bin/activate
 
       - name: Install dependencies
-        run: pip install -r hello-fastapi/app/requirements.txt
+        run: pip install -r requirements.txt
 
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       - name: Zip artifact for deployment
@@ -64,4 +64,4 @@ jobs:
         with:
           app-name: 'instance123'
           slot-name: 'Production'
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_070BFD6AA8414DE2872DFFD13845CC32 }}
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_6811F41CA8FA4B099CE21937CE759A03 }}
